--- a/src/knight.html
+++ b/src/knight.html
@@ -3,18 +3,22 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Graph</title>
+	<title>Knight</title>
+	
 	<!--jQuerry-->
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-		crossorigin="anonymous"></script>
-    
+	<script type="text/javascript" src="./lib/jquery.min.js"></script>
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="./lib/bootstrap.min.css">
+	<!-- Style -->
+	<link rel="stylesheet" href="./style.css">
+
 </head>
 
 
 <body>
 
 
-	<div id="chart-container" style="min-height:500px; height:100%; width:50%;">
+	<div id="armor" style="min-height:500px; height:100%; width:50%;">
 		<!-- image tags go here -->
 		<img id="helmet" src="" />
 		<img id="torso" src="" />
