--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,24 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Blaz Klaric</title>
-	
+
 	<!--jQuerry-->
 	<script type="text/javascript" src="./lib/jquery.min.js"></script>
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="./lib/bootstrap.min.css">
 	<!-- Style -->
 	<link rel="stylesheet" href="./style.css">
-	
+
 </head>
 
 
 <body>
 
-	<!-- logo -->
+	<!-- logo 
 	<img src="logo" />
+	-->
 
-	<script type="text/javascript" src="./build/app.js"></script>
+	<script type="text/javascript" src="../build/app.js"></script>
 
 </body>
 
