updated clikcHandles and style

--- a/src/knight.html
+++ b/src/knight.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Knight</title>
-	
+
 	<!--jQuerry-->
 	<script type="text/javascript" src="./lib/jquery.min.js"></script>
 	<!-- Bootstrap -->
@@ -17,16 +17,15 @@
 
 <body>
 
-
-	<div id="armor" style="min-height:500px; height:100%; width:50%;">
-		<!-- image tags go here -->
-		<img id="helmet" src="" />
-		<img id="torso" src="" />
-		<img id="arms" src="" />
-		<img id="legs" src="" />
+	<div id="knight">
+		<div id="armor" style="min-height:500px; height:100%; width:50%;">
+			<!-- image tags go here -->
+			<img id="helmet" src="" />
+			<img id="torso" src="" />
+			<img id="arms" src="" />
+			<img id="legs" src="" />
+		</div>
 	</div>
-
-	<script type="text/javascript" src="./build/app.js"></script>
 
 </body>
 
