--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,17 @@
 
 <body>
 
+	<!--iframe -->
+	<div id="knight">
+		<div id="armor" style="min-height:500px; height:100%; width:50%;">
+			<!-- image tags go here -->
+			<img id="helm" src="" />
+			<img id="chest" src="" />
+			<img id="arms" src="" />
+			<img id="legs" src="" />
+		</div>
+	</div>
+
 	<!-- logo 
 	<img src="logo" />
 	-->
