--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,9 @@
 
 <body>
 
-	<!--iframe -->
+	<!-- knight -->
 	<div id="knight">
+		<!-- armor -->
 		<div id="armor" style="min-height:500px; height:100%; width:50%;">
 			<!-- image tags go here -->
 			<img id="helm" src="" />
@@ -26,11 +27,21 @@
 			<img id="arms" src="" />
 			<img id="legs" src="" />
 		</div>
+
+		<!-- name -->
+
+		<!-- stats -->
+
+		<!-- traits -->
+
+		<!-- biography -->
 	</div>
 
-	<!-- logo 
-	<img src="logo" />
-	-->
+	<!-- logo -->
+	<div class="logo-container">
+		<img id="logo" src="logo" />
+	</div>
+
 
 	<script type="text/javascript" src="../build/app.js"></script>
 
