updated resetView and getView

--- a/src/index.html
+++ b/src/index.html
@@ -29,12 +29,14 @@
 		</div>
 
 		<!-- name -->
-
+		<div id = "name"></div>
 		<!-- stats -->
-
+		<div id="stats"></div>
 		<!-- traits -->
-
+		<div id="traits"></div>
 		<!-- biography -->
+		<div id="biography"></div>
+		
 	</div>
 
 	<!-- logo -->
