--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,9 @@
 		<img id="logo" src="logo" />
 	</div>
 
+	<!-- loading -->
+	<div id="animation"></div>
+
 
 	<script type="text/javascript" src="../build/app.js"></script>
 
