--- a/src/knightSheet.html
+++ b/src/knightSheet.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Knight</title>
+	<title>Blaz Klaric</title>
 
 	<!--jQuerry-->
 	<script type="text/javascript" src="./lib/jquery.min.js"></script>
@@ -17,15 +17,38 @@
 
 <body>
 
+	<!-- knight -->
 	<div id="knight">
+		<!-- armor -->
 		<div id="armor" style="min-height:500px; height:100%; width:50%;">
 			<!-- image tags go here -->
-			<img id="helmet" src="" />
-			<img id="torso" src="" />
+			<img id="helm" src="" />
+			<img id="chest" src="" />
 			<img id="arms" src="" />
 			<img id="legs" src="" />
 		</div>
+
+		<!-- name -->
+		<div id = "name"></div>
+		<!-- stats -->
+		<div id="stats"></div>
+		<!-- traits -->
+		<div id="traits"></div>
+		<!-- biography -->
+		<div id="biography"></div>
+		
 	</div>
+
+	<!-- logo -->
+	<div class="logo-container">
+		<img id="logo" src="logo" />
+	</div>
+
+	<!-- loading -->
+	<div id="animation"></div>
+
+
+	<script type="text/javascript" src="../build/app.js"></script>
 
 </body>
 
