--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="./style.css">
 	<!-- Style for loader -->
 	<link rel="stylesheet" type="text/css" href="./spin.css">
+	<script type="text/javascript" src="../build/app.js"></script>
 
 </head>
 
@@ -32,8 +33,14 @@
 	</div>
 
 
-	<script type="text/javascript" src="../build/app.js"></script>
 
+			<div class="col-sm-9" id="armor" style="display: none">
+					<!-- image tags go here -->
+					<img id="helm" src="" />
+					<img id="chest" src="" />
+					<img id="arms" src="" />
+					<img id="legs" src="" />
+			</div>
 </body>
 
 </html>
