--- a/src/knight.html
+++ b/src/knight.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="./lib/bootstrap.min.css">
 	<!-- Style -->
 	<link rel="stylesheet" href="./style.css">
+	<script type="text/javascript" src="../build/app.js"></script>
 
 </head>
 
@@ -20,8 +21,8 @@
 		<div class="row">
 			<div class="col-sm-9" id="armor">
 					<!-- image tags go here -->
-					<img id="helmet" src="" />
-					<img id="torso" src="" />
+					<img id="helm" src="" />
+					<img id="chest" src="" />
 					<img id="arms" src="" />
 					<img id="legs" src="" />
 			</div>
