--- a/src/index.html
+++ b/src/index.html
@@ -33,14 +33,14 @@
 	</div>
 
 
-
-			<div class="col-sm-9" id="armor" style="display: none">
-					<!-- image tags go here -->
+			<!-- image tags go here -->
+			<!--<div class="col-sm-9" id="armor" style="display: none">
+					
 					<img id="helm" src="" />
 					<img id="chest" src="" />
 					<img id="arms" src="" />
 					<img id="legs" src="" />
-			</div>
+			</div>-->
 </body>
 
 </html>
