--- a/src/index.html
+++ b/src/index.html
@@ -19,22 +19,30 @@
 
 
 <body>
+
 	<div id="main">
 		<!-- logo -->
 		<div class="row">
 			<div id="logo">
 				<img id="logo" src="logo" />
 			</div>
-			
+
 			<div align="center" class=".uil-spin-css" id="loading-banner" style="display:none">
 				<img src="img/spin.svg">
 			</div>
 		</div>
 	</div>
 
+	<!-- TEST
 
-			<!-- image tags go here -->
-			<!--<div class="col-sm-9" id="armor" style="display: none">
+	<iframe name="knightTemplate" id="knightTemplate" style="dispay:none">
+
+	</iframe>
+
+	 end TEST -->
+
+	<!-- image tags go here -->
+	<!--<div class="col-sm-9" id="armor" style="display: none">
 					
 					<img id="helm" src="" />
 					<img id="chest" src="" />
