--- a/src/knight.html
+++ b/src/knight.html
@@ -11,13 +11,14 @@
 	<link rel="stylesheet" href="./lib/bootstrap.min.css">
 	<!-- Style -->
 	<link rel="stylesheet" href="./style.css">
-	<script type="text/javascript" src="../build/app.js"></script>
+	<!--<script type="text/javascript" src="../build/app.js"></script>-->
+	<!--<script type="text/javascript" src="./js/renderKnight.js"></script>-->
 
 </head>
 
 
 <body>
-	<div class="container">
+	<div id='paperKnight' class="container">
 		<div id="knight">
 			<div class="row">
 				<div id="armor" class="col-sm-9">
