--- a/src/knight.html
+++ b/src/knight.html
@@ -13,11 +13,16 @@
 	<link rel="stylesheet" href="./style.css">
 	<script type="text/javascript" src="../build/app.js"></script>
 
+	<script src="jquery.PrintArea.js"></script>
+	
+
 </head>
 
 
 <body>
-	<div id="main">
+
+ 
+	<div class="main" id="main">
 		<div class="row">
 			<div class="col-sm-9" id="armor">
 					<!-- image tags go here -->
