--- a/src/index.html
+++ b/src/index.html
@@ -14,33 +14,66 @@
 	<!-- Style for loader -->
 	<link rel="stylesheet" type="text/css" href="./spin.css">
 	<script type="text/javascript" src="../build/app.js"></script>
-
+	<script src="jquery.PrintArea.js"></script>
 </head>
 
 
 <body>
-	<div id="main">
+	<div id="main1">
 		<!-- logo -->
 		<div class="row">
 			<div id="logo">
 				<img id="logo" src="logo" />
 			</div>
 			
-			<div align="center" class=".uil-spin-css" id="loading-banner" style="display:none">
+			<div align="center" class=".uil-spin-css" id="loading-banner" >
 				<img src="img/spin.svg">
 			</div>
+		</div>
+		<div class="main" id="main" style="visibility: hidden;">
+			<div class="row">
+				<div class="col-sm-9" id="armor">
+						<!-- image tags go here -->
+						<img id="helm" src="" />
+						<img id="chest" src="" />
+						<img id="arms" src="" />
+						<img id="legs" src="" />
+				</div>
+				
+				<div id="stats" class="col-sm-3">
+					<input type="text" id="Name" value="" readonly>
+					<input type="number" id="stat_1" value="" readonly>
+					<input type="number" id="stat_2" value="" readonly>
+					<input type="number" id="stat_3" value="" readonly>
+					<input type="number" id="stat_4" value="" readonly>
+					<input type="number" id="stat_5" value="" readonly>
+					<input type="number" id="stat_6" value="" readonly>
+				</div>
+			</div>
+
+			<div class="row">
+				<div id="traits" class="col-sm-6">
+					<input type="text" id="trait_1" value="" readonly>
+					<input type="text" id="trait_2" value="" readonly>
+					<input type="text" id="trait_3" value="" readonly>
+					<input type="text" id="trait_4" value="" readonly>
+					<input type="text" id="trait_5" value="" readonly>
+				</div>
+				<div id="skills" class="col-sm-6">
+					<input type="text" id="skill_1" value="" readonly>
+					<input type="text" id="skill_2" value="" readonly>
+					<input type="text" id="skill_3" value="" readonly>
+					<input type="text" id="skill_4" value="" readonly>
+					<input type="text" id="skill_5" value="" readonly>
+				</div>
+			</div>
+
 		</div>
 	</div>
 
 
 
-			<div class="col-sm-9" id="armor" style="display: none">
-					<!-- image tags go here -->
-					<img id="helm" src="" />
-					<img id="chest" src="" />
-					<img id="arms" src="" />
-					<img id="legs" src="" />
-			</div>
+
 </body>
 
 </html>
