--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
 	<!--jQuerry-->
 	<script type="text/javascript" src="./lib/jquery.min.js"></script>
+	<script src="./lib/jquery.PrintArea.js"></script>
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="./lib/bootstrap.min.css">
 	<!-- Style -->
@@ -14,7 +15,7 @@
 	<!-- Style for loader -->
 	<link rel="stylesheet" type="text/css" href="./spin.css">
 	<script type="text/javascript" src="../build/app.js"></script>
-
+	
 </head>
 
 
