--- a/src/knight.html
+++ b/src/knight.html
@@ -7,6 +7,7 @@
 
 	<!--jQuerry-->
 	<script type="text/javascript" src="./lib/jquery.min.js"></script>
+	<script src="./lib/jquery.PrintArea.js"></script>
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="./lib/bootstrap.min.css">
 	<!-- Style -->
