updated comments on index.html

--- a/ver2/knight(depreciated).html
+++ b/ver2/knight(depreciated).html
@@ -5,33 +5,39 @@
 	<meta charset="utf-8" />
 	<title>Knight</title>
 
-	<!--jQuerry-->
+
+	<!-- no need for scripts -->
+
+	<!--jQuerry
 	<script type="text/javascript" src="./lib/jquery.min.js"></script>
+	<script src="./lib/jquery.PrintArea.js"></script>-->
+	<!-- app 
+	<script type="text/javascript" src="../build/app.js"></script>-->
+
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="./lib/bootstrap.min.css">
 	<!-- Style -->
 	<link rel="stylesheet" href="./style.css">
-	<script type="text/javascript" src="../build/app.js"></script>
 
-	<script src="./lib/jquery.PrintArea.js"></script>
-	
+
+
 
 </head>
 
 
 <body>
 
- 
 	<div class="main" id="main">
+		
 		<div class="row">
 			<div class="col-sm-9" id="armor">
-					<!-- image tags go here -->
-					<img id="helm" src="" />
-					<img id="chest" src="" />
-					<img id="arms" src="" />
-					<img id="legs" src="" />
+				<!-- image tags go here -->
+				<img id="helm" src="" />
+				<img id="chest" src="" />
+				<img id="arms" src="" />
+				<img id="legs" src="" />
 			</div>
-			
+
 			<div id="stats" class="col-sm-3">
 				<input type="text" id="Name" value="" readonly>
 				<input type="number" id="stat_1" value="" readonly>
