--- a/ver2/index.html
+++ b/ver2/index.html
@@ -7,73 +7,97 @@
 
 	<!--jQuerry-->
 	<script type="text/javascript" src="./lib/jquery.min.js"></script>
+	<script src="./lib/jquery.PrintArea.js"></script>
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="./lib/bootstrap.min.css">
 	<!-- Style -->
 	<link rel="stylesheet" href="./style.css">
 	<!-- Style for loader -->
 	<link rel="stylesheet" type="text/css" href="./spin.css">
+
+	<!-- app -->
 	<script type="text/javascript" src="../build/app.js"></script>
-	<script src="./lib/jquery.PrintArea.js"></script>
 </head>
 
 
 <body>
-	<div id="main1">
-		<!-- logo -->
-		<div class="row">
-			<div id="logo">
-				<img id="logo" src="logo" />
-			</div>
 
-			<div align="center" class=".uil-spin-css" id="loading-banner">
-				<img src="img/spin.svg">
-			</div>
-		</div>
-		<div class="main" id="knight" style="visibility: hidden;">
+	<!-- container -->
+	<div class="container">
+		<!--main1 start -->
+		<div id="main1">
+
+			<!-- logo and animation start -->
 			<div class="row">
-				<div class="col-sm-9" id="armor">
-					<!-- image tags go here -->
-					<img id="helm" src="" />
-					<img id="chest" src="" />
-					<img id="arms" src="" />
-					<img id="legs" src="" />
+				<div id="logo">
+					<img id="logo" src="logo" />
 				</div>
 
-				<div id="stats" class="col-sm-3">
-					<!-- changed ids to corresponding stats -->
-					<input type="text" id="name" value="" readonly>
-					<input type="text" id="attack" value="" readonly>
-					<input type="text" id="defense" value="" readonly>
-					<input type="text" id="stamina" value="" readonly>
-					<input type="text" id="courage" value="" readonly>
-					<input type="text" id="movement" value="" readonly>
+				<div align="center" class=".uil-spin-css" id="loading-banner">
+					<img src="img/spin.svg">
 				</div>
 			</div>
+			<!-- logo and animation end -->
 
-			<div class="row">
-				<div id="traits" class="col-sm-6">
-					<input type="text" id="trait_1" value="" readonly>
-					<input type="text" id="trait_2" value="" readonly>
-					<input type="text" id="trait_3" value="" readonly>
-					<input type="text" id="trait_4" value="" readonly>
-					<input type="text" id="trait_5" value="" readonly>
+			<!-- paperKnight start (print page) -->
+			<div class="main" id="knight" style="visibility: hidden;">
+				<div class="row">
+
+					<!-- ARMOR -->
+					<div id="armor" class="col-sm-9">
+						<!-- image tags go here -->
+						<img id="helm" src="" />
+						<img id="chest" src="" />
+						<img id="arms" src="" />
+						<img id="legs" src="" />
+					</div>
+					<!-- ARMOR end -->
+
+					<!-- STATS -->
+					<div id="stats" class="col-sm-3">
+						<!-- changed ids to corresponding stats -->
+						<input type="text" id="name" value="" readonly>
+						<input type="text" id="attack" value="" readonly>
+						<input type="text" id="defense" value="" readonly>
+						<input type="text" id="stamina" value="" readonly>
+						<input type="text" id="courage" value="" readonly>
+						<input type="text" id="movement" value="" readonly>
+					</div>
+					<!-- STATS end -->
+
 				</div>
-				<div id="skills" class="col-sm-6">
-					<input type="text" id="skill_1" value="" readonly>
-					<input type="text" id="skill_2" value="" readonly>
-					<input type="text" id="skill_3" value="" readonly>
-					<input type="text" id="skill_4" value="" readonly>
-					<input type="text" id="skill_5" value="" readonly>
+
+				<div class="row">
+					<!-- TRAITS -->
+					<div id="traits" class="col-sm-6">
+						<input type="text" id="trait_1" value="" readonly>
+						<input type="text" id="trait_2" value="" readonly>
+						<input type="text" id="trait_3" value="" readonly>
+						<input type="text" id="trait_4" value="" readonly>
+						<input type="text" id="trait_5" value="" readonly>
+					</div>
+					<!-- TRAITS end -->
+
+					<!-- SKILLS -->
+					<div id="skills" class="col-sm-6">
+						<input type="text" id="skill_1" value="" readonly>
+						<input type="text" id="skill_2" value="" readonly>
+						<input type="text" id="skill_3" value="" readonly>
+						<input type="text" id="skill_4" value="" readonly>
+						<input type="text" id="skill_5" value="" readonly>
+					</div>
+					<!-- SKILLS end -->
 				</div>
+
 			</div>
+			<!-- paperKnight (print page) end -->
 
+			
 		</div>
+		<!-- main1 end -->
+
 	</div>
-
-
-
-
+	<!-- container end -->
 </body>
 
 </html>
