--- a/ver2/index.html
+++ b/ver2/index.html
@@ -29,11 +29,11 @@
 
 			<!-- logo and animation start -->
 			<div class="row">
-				<div id="logo">
-					<img id="logo" src="logo" />
-				</div>
 
-				<div align="center" class=".uil-spin-css" id="loading-banner">
+				<img id="logo" src="logo" />
+
+
+				<div align="center" class=".uil-spin-css" id="loading-banner" style="display:none">
 					<img src="img/spin.svg">
 				</div>
 			</div>
@@ -92,7 +92,7 @@
 			</div>
 			<!-- paperKnight (print page) end -->
 
-			
+
 		</div>
 		<!-- main1 end -->
 
