update index.html and style.css

--- a/ver2/index.html
+++ b/ver2/index.html
@@ -24,6 +24,7 @@
 
 	<!-- container -->
 	<div class="container">
+
 		<!--main1 start -->
 		<div id="main1">
 
@@ -41,10 +42,16 @@
 
 			<!-- paperKnight start (print page) -->
 			<div class="main" id="knight" style="visibility: hidden;">
+
+				<!-- test -->
+				<img src="./img/Character_sheet.png" />
+				<!-- test end -->
+
+
 				<div class="row">
 
 					<!-- ARMOR -->
-					<div id="armor" class="col-sm-9">
+					<div id="armor" class="col-sm-6">
 						<!-- image tags go here -->
 						<img id="helm" src="" />
 						<img id="chest" src="" />
@@ -54,14 +61,16 @@
 					<!-- ARMOR end -->
 
 					<!-- STATS -->
-					<div id="stats" class="col-sm-3">
-						<!-- changed ids to corresponding stats -->
-						<input type="text" id="name" value="" readonly>
-						<input type="text" id="attack" value="" readonly>
-						<input type="text" id="defense" value="" readonly>
-						<input type="text" id="stamina" value="" readonly>
-						<input type="text" id="courage" value="" readonly>
-						<input type="text" id="movement" value="" readonly>
+					<div class="col-sm-3 stats">
+						<div id="stats" class="input-group">
+							<!-- changed ids to corresponding stats -->
+							<input type="text" id="name" class="form-control name" value="" readonly>
+							<input type="text" id="attack" class="form-control stat1" value="" readonly>
+							<input type="text" id="defense" class="form-control stat" value="" readonly>
+							<input type="text" id="stamina" class="form-control stat" value="" readonly>
+							<input type="text" id="courage" class="form-control stat" value="" readonly>
+							<input type="text" id="movement" class="form-control stat" value="" readonly>
+						</div>
 					</div>
 					<!-- STATS end -->
 
@@ -69,22 +78,26 @@
 
 				<div class="row">
 					<!-- TRAITS -->
-					<div id="traits" class="col-sm-6">
-						<input type="text" id="trait_1" value="" readonly>
-						<input type="text" id="trait_2" value="" readonly>
-						<input type="text" id="trait_3" value="" readonly>
-						<input type="text" id="trait_4" value="" readonly>
-						<input type="text" id="trait_5" value="" readonly>
+					<div class="col-sm-6">
+						<div id="traits" class="input-group">
+							<input type="text" id="trait_1" class="form-control traits" value="adf" readonly>
+							<input type="text" id="trait_2" class="form-control traits" value="dsf" readonly>
+							<input type="text" id="trait_3" class="form-control traits" value="gfg" readonly>
+							<input type="text" id="trait_4" class="form-control traits" value="hghgh" readonly>
+							<input type="text" id="trait_5" class="form-control traits" value="jghghgh" readonly>
+						</div>
 					</div>
 					<!-- TRAITS end -->
 
 					<!-- SKILLS -->
-					<div id="skills" class="col-sm-6">
-						<input type="text" id="skill_1" value="" readonly>
-						<input type="text" id="skill_2" value="" readonly>
-						<input type="text" id="skill_3" value="" readonly>
-						<input type="text" id="skill_4" value="" readonly>
-						<input type="text" id="skill_5" value="" readonly>
+					<div class="col-sm-6">
+						<div id="skills" class="input-group">
+							<input type="text" id="skill_1" class="form-control skills" value="trfdsg" readonly>
+							<input type="text" id="skill_2" class="form-control skills" value="fdsgsdfg" readonly>
+							<input type="text" id="skill_3" class="form-control skills" value="csfgsfdg" readonly>
+							<input type="text" id="skill_4" class="form-control skills" value="fdsgfsdg" readonly>
+							<input type="text" id="skill_5" class="form-control skills" value="fdgfdgfg" readonly>
+						</div>
 					</div>
 					<!-- SKILLS end -->
 				</div>
