styleChrome.css setup

--- a/ver2/index.html
+++ b/ver2/index.html
@@ -79,25 +79,25 @@
 
 				<div class="row">
 					<!-- TRAITS -->
-					<div class="col-sm-6">
-						<div id="traits" class="input-group">
-							<input type="text" id="trait_1" class="form-control traits" value="adf" readonly>
-							<input type="text" id="trait_2" class="form-control traits" value="dsf" readonly>
-							<input type="text" id="trait_3" class="form-control traits" value="gfg" readonly>
-							<input type="text" id="trait_4" class="form-control traits" value="hghgh" readonly>
-							<input type="text" id="trait_5" class="form-control traits" value="jghghgh" readonly>
+					<div class="col-sm-6 traits">
+						<div id="traits" class="input-group traits">
+							<input type="text" id="trait_1" class="form-control trait" value="adf" readonly>
+							<input type="text" id="trait_2" class="form-control trait" value="dsf" readonly>
+							<input type="text" id="trait_3" class="form-control trait" value="gfg" readonly>
+							<input type="text" id="trait_4" class="form-control trait" value="hghgh" readonly>
+							<input type="text" id="trait_5" class="form-control trait" value="jghghgh" readonly>
 						</div>
 					</div>
 					<!-- TRAITS end -->
 
 					<!-- SKILLS -->
-					<div class="col-sm-6">
-						<div id="skills" class="input-group">
-							<input type="text" id="skill_1" class="form-control skills" value="trfdsg" readonly>
-							<input type="text" id="skill_2" class="form-control skills" value="fdsgsdfg" readonly>
-							<input type="text" id="skill_3" class="form-control skills" value="csfgsfdg" readonly>
-							<input type="text" id="skill_4" class="form-control skills" value="fdsgfsdg" readonly>
-							<input type="text" id="skill_5" class="form-control skills" value="fdgfdgfg" readonly>
+					<div class="col-sm-6 skills">
+						<div id="skills" class="input-group skills">
+							<input type="text" id="skill_1" class="form-control skill" value="trfdsg" readonly>
+							<input type="text" id="skill_2" class="form-control skill" value="fdsgsdfg" readonly>
+							<input type="text" id="skill_3" class="form-control skill" value="csfgsfdg" readonly>
+							<input type="text" id="skill_4" class="form-control skill" value="fdsgfsdg" readonly>
+							<input type="text" id="skill_5" class="form-control skill" value="fdgfdgfg" readonly>
 						</div>
 					</div>
 					<!-- SKILLS end -->
