--- a/ver2/index.html
+++ b/ver2/index.html
@@ -25,16 +25,13 @@
 	<!-- container -->
 	<div class="container">
 
-		<!--main1 start -->
-		<div id="main1">
-
 			<!-- logo and animation start -->
 			<div class="row">
 
-				<img id="logo" src="logo" />
+				<img class="center-align" align="center"id="logo" src="logo" />
 
 
-				<div align="center" class=".uil-spin-css" id="loading-banner" style="display:none">
+				<div class="center-align" align="center" class=".uil-spin-css" id="loading-banner" style="display:none">
 					<img src="img/spin.svg">
 				</div>
 			</div>
@@ -42,7 +39,7 @@
 
 
 			<!-- paperKnight start (print page) -->
-			<div class="main" id="knight" style="visibility:hidden;">
+			<div id="paperKnight" class="paperKnight" style="display:none;">
 
 				<!-- test -->
 				<img class="container-background" src="./img/Character_sheet.png" />
@@ -114,10 +111,6 @@
 
 			</div>
 			<!-- paperKnight (print page) end -->
-
-
-		</div>
-		<!-- main1 end -->
 
 	</div>
 	<!-- container end -->
