--- a/ver2/index.html
+++ b/ver2/index.html
@@ -11,12 +11,13 @@
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="./lib/bootstrap.min.css">
 	<!-- Style -->
-	<link rel="stylesheet" href="./styleChrome.css">
+	<link rel="stylesheet" href="./css/styleChrome.css">
 	<!-- Style for loader -->
-	<link rel="stylesheet" type="text/css" href="./spin.css">
+	<link rel="stylesheet" type="text/css" href="./css/spin.css">
 
 	<!-- app -->
 	<script type="text/javascript" src="../build/app.js"></script>
+
 </head>
 
 
