--- a/ver2/index.html
+++ b/ver2/index.html
@@ -42,9 +42,10 @@
 			<!-- paperKnight start (print page) -->
 			<div id="paperKnight" class="paperKnight" style="display:none;">
 
-				<!-- test -->
+				<!-- BACKGOUND LAYERS -->
 				<img class="container-background" src="./img/Character_sheet.png" />
-				<!-- test end -->
+				<!--<img class="container-background" src="image source" />-->
+				<!-- BACKGOUND LAYERS end -->
 
 
 				<div class="row">
