--- a/ver2/index.html
+++ b/ver2/index.html
@@ -71,12 +71,12 @@
 						<div id="stats" class="input-group">
 							<!-- changed ids to corresponding stats -->
 							<!--<input type="text" id="name" class="form-control name" value="" readonly>-->
-							<input type="text" id="attack" class="form-control firstStat" value="" readonly>
-							<input type="text" id="defense" class="form-control stat" value="" readonly>
-							<input type="text" id="stamina" class="form-control stat" value="" readonly>
-							<input type="text" id="courage" class="form-control stat" value="" readonly>
-							<input type="text" id="movement" class="form-control stat" value="" readonly>
+							<input type="text" id="strength" class="form-control firstStat" value="" readonly>
+							<input type="text" id="dexterity" class="form-control stat" value="" readonly>
+							<input type="text" id="cnstitution" class="form-control stat" value="" readonly>
+							<input type="text" id="inteligence" class="form-control stat" value="" readonly>
 							<input type="text" id="wisdom" class="form-control stat" value="" readonly>
+							<input type="text" id="charisma" class="form-control stat" value="" readonly>
 						</div>
 						<!-- STATS end -->
 
