--- a/ver2/index.html
+++ b/ver2/index.html
@@ -11,9 +11,9 @@
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="./lib/bootstrap.min.css">
 	<!-- Style -->
-	<link rel="stylesheet" href="./css/styleChrome.css">
+	<link rel="stylesheet" href="./style/styleChrome.css">
 	<!-- Style for loader -->
-	<link rel="stylesheet" type="text/css" href="./css/spin.css">
+	<link rel="stylesheet" type="text/css" href="./style/spin.css">
 
 	<!-- app -->
 	<script type="text/javascript" src="../build/app.js"></script>
