--- a/ver2/index.html
+++ b/ver2/index.html
@@ -73,7 +73,7 @@
 							<!--<input type="text" id="name" class="form-control name" value="" readonly>-->
 							<input type="text" id="strength" class="form-control firstStat" value="" readonly>
 							<input type="text" id="dexterity" class="form-control stat" value="" readonly>
-							<input type="text" id="cnstitution" class="form-control stat" value="" readonly>
+							<input type="text" id="constitution" class="form-control stat" value="" readonly>
 							<input type="text" id="inteligence" class="form-control stat" value="" readonly>
 							<input type="text" id="wisdom" class="form-control stat" value="" readonly>
 							<input type="text" id="charisma" class="form-control stat" value="" readonly>
