printing still prompting

--- a/ver2/index.html
+++ b/ver2/index.html
@@ -8,6 +8,7 @@
 	<!--jQuerry-->
 	<script type="text/javascript" src="./lib/jquery.min.js"></script>
 	<script src="./lib/jquery.PrintArea.js"></script>
+	<script src="./lib/mousetrap.js"></script>
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="./lib/bootstrap.min.css">
 	<!-- Style -->
@@ -26,96 +27,97 @@
 	<!-- container -->
 	<div class="container">
 
-			<!-- logo and animation start -->
+		<!-- logo and animation start -->
+		<div class="row">
+
+			<img class="center-align" align="center" id="logo" src="logo" />
+
+
+			<div class="center-align" align="center" class=".uil-spin-css" id="loading-banner" style="display:none">
+				<img src="img/spin.svg">
+			</div>
+		</div>
+		<!-- logo and animation end -->
+
+
+		<!-- paperKnight start (print page) -->
+		<div id="paperKnight" class="paperKnight" style="display:none;">
+
+			<!-- BACKGOUND LAYERS -->
+			<img class="container-background" src="./img/Character_sheet.png" />
+			<!--<img class="container-background" src="image source" />-->
+			<!-- BACKGOUND LAYERS end -->
+
+
 			<div class="row">
 
-				<img class="center-align" align="center"id="logo" src="logo" />
-
-
-				<div class="center-align" align="center" class=".uil-spin-css" id="loading-banner" style="display:none">
-					<img src="img/spin.svg">
+				<!-- ARMOR -->
+				<div id="armor" class="col-sm-6">
+					<!-- image tags go here -->
+					<img id="helm" src="" />
+					<img id="chest" src="" />
+					<img id="arms" src="" />
+					<img id="legs" src="" />
 				</div>
-			</div>
-			<!-- logo and animation end -->
+				<!-- ARMOR end -->
 
+				<!-- NAME AND STATS -->
+				<div class="col-sm-3 stats">
 
-			<!-- paperKnight start (print page) -->
-			<div id="paperKnight" class="paperKnight" style="display:none;">
+					<!-- NAME -->
+					<input type="text" id="name" class="form-control name" value="" readonly>
+					<!-- NAME end -->
 
-				<!-- BACKGOUND LAYERS -->
-				<img class="container-background" src="./img/Character_sheet.png" />
-				<!--<img class="container-background" src="image source" />-->
-				<!-- BACKGOUND LAYERS end -->
-
-
-				<div class="row">
-
-					<!-- ARMOR -->
-					<div id="armor" class="col-sm-6">
-						<!-- image tags go here -->
-						<img id="helm" src="" />
-						<img id="chest" src="" />
-						<img id="arms" src="" />
-						<img id="legs" src="" />
+					<!-- STATS -->
+					<div id="stats" class="input-group">
+						<!-- changed ids to corresponding stats -->
+						<!--<input type="text" id="name" class="form-control name" value="" readonly>-->
+						<input type="text" id="strength" class="form-control firstStat" value="" readonly>
+						<input type="text" id="dexterity" class="form-control stat" value="" readonly>
+						<input type="text" id="constitution" class="form-control stat" value="" readonly>
+						<input type="text" id="inteligence" class="form-control stat" value="" readonly>
+						<input type="text" id="wisdom" class="form-control stat" value="" readonly>
+						<input type="text" id="charisma" class="form-control stat" value="" readonly>
 					</div>
-					<!-- ARMOR end -->
-
-					<!-- NAME AND STATS -->
-					<div class="col-sm-3 stats">
-
-						<!-- NAME -->
-						<input type="text" id="name" class="form-control name" value="" readonly>
-						<!-- NAME end -->
-
-						<!-- STATS -->
-						<div id="stats" class="input-group">
-							<!-- changed ids to corresponding stats -->
-							<!--<input type="text" id="name" class="form-control name" value="" readonly>-->
-							<input type="text" id="strength" class="form-control firstStat" value="" readonly>
-							<input type="text" id="dexterity" class="form-control stat" value="" readonly>
-							<input type="text" id="constitution" class="form-control stat" value="" readonly>
-							<input type="text" id="inteligence" class="form-control stat" value="" readonly>
-							<input type="text" id="wisdom" class="form-control stat" value="" readonly>
-							<input type="text" id="charisma" class="form-control stat" value="" readonly>
-						</div>
-						<!-- STATS end -->
-
-					</div>
-					<!-- NAME AND STATS end -->
+					<!-- STATS end -->
 
 				</div>
-
-				<div class="row">
-					<!-- TRAITS -->
-					<div class="col-sm-6 traits">
-						<div id="traits" class="input-group">
-							<input type="text" id="trait_1" class="form-control trait" value="adf" readonly>
-							<input type="text" id="trait_2" class="form-control trait" value="dsf" readonly>
-							<input type="text" id="trait_3" class="form-control trait" value="gfg" readonly>
-							<input type="text" id="trait_4" class="form-control trait" value="hghgh" readonly>
-							<input type="text" id="trait_5" class="form-control trait" value="jghghgh" readonly>
-						</div>
-					</div>
-					<!-- TRAITS end -->
-
-					<!-- SKILLS -->
-					<div class="col-sm-6 skills">
-						<div id="skills" class="input-group">
-							<input type="text" id="skill_1" class="form-control skill" value="trfdsg" readonly>
-							<input type="text" id="skill_2" class="form-control skill" value="fdsgsdfg" readonly>
-							<input type="text" id="skill_3" class="form-control skill" value="csfgsfdg" readonly>
-							<input type="text" id="skill_4" class="form-control skill" value="fdsgfsdg" readonly>
-							<input type="text" id="skill_5" class="form-control skill" value="fdgfdgfg" readonly>
-						</div>
-					</div>
-					<!-- SKILLS end -->
-				</div>
+				<!-- NAME AND STATS end -->
 
 			</div>
-			<!-- paperKnight (print page) end -->
+
+			<div class="row">
+				<!-- TRAITS -->
+				<div class="col-sm-6 traits">
+					<div id="traits" class="input-group">
+						<input type="text" id="trait_1" class="form-control trait" value="adf" readonly>
+						<input type="text" id="trait_2" class="form-control trait" value="dsf" readonly>
+						<input type="text" id="trait_3" class="form-control trait" value="gfg" readonly>
+						<input type="text" id="trait_4" class="form-control trait" value="hghgh" readonly>
+						<input type="text" id="trait_5" class="form-control trait" value="jghghgh" readonly>
+					</div>
+				</div>
+				<!-- TRAITS end -->
+
+				<!-- SKILLS -->
+				<div class="col-sm-6 skills">
+					<div id="skills" class="input-group">
+						<input type="text" id="skill_1" class="form-control skill" value="trfdsg" readonly>
+						<input type="text" id="skill_2" class="form-control skill" value="fdsgsdfg" readonly>
+						<input type="text" id="skill_3" class="form-control skill" value="csfgsfdg" readonly>
+						<input type="text" id="skill_4" class="form-control skill" value="fdsgfsdg" readonly>
+						<input type="text" id="skill_5" class="form-control skill" value="fdgfdgfg" readonly>
+					</div>
+				</div>
+				<!-- SKILLS end -->
+			</div>
+
+		</div>
+		<!-- paperKnight (print page) end -->
 
 	</div>
 	<!-- container end -->
+
 </body>
 
 </html>
