--- a/ver2/index.html
+++ b/ver2/index.html
@@ -43,10 +43,9 @@
 		<!-- paperKnight start (print page) -->
 		<div id="paperKnight" class="paperKnight" style="display:none;">
 
-			<!-- BACKGOUND LAYERS -->
+			<!-- BACKGOUND LAYER -->
 			<img class="container-background" src="./img/Character_sheet.png" />
-			<!--<img class="container-background" src="image source" />-->
-			<!-- BACKGOUND LAYERS end -->
+			<!-- BACKGOUND LAYER end -->
 
 
 			<div class="row">
